--- a/html/157d347d803a4b4b89b23cc1edeee7a7.html
+++ b/html/157d347d803a4b4b89b23cc1edeee7a7.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "HSS02"
+var lab_id = "hmt02"
 var lab_name = "Virtual English and Communication Lab"
-var exp_id = "E99498"
+var exp_id = "e99498"
 var exp_name = "Business Communication"
 // ]]></script>
 </p>
