--- a/html/3a23791c95af467c9b6ed3900d551a6a.html
+++ b/html/3a23791c95af467c9b6ed3900d551a6a.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "HSS02"
+var lab_id = "hmt02"
 var lab_name = "Virtual English and Communication Lab"
-var exp_id = "E99497"
+var exp_id = "e99497"
 var exp_name = "Common Errors in English"
 // ]]></script>
 </p>
