--- a/html/740db46bee4d456b897e7afee9fef9df.html
+++ b/html/740db46bee4d456b897e7afee9fef9df.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "HSS02"
+var lab_id = "hmt02"
 var lab_name = "Virtual English and Communication Lab"
-var exp_id = "E99496"
+var exp_id = "e99496"
 var exp_name = "Communication Skills"
 // ]]></script>
 </p>
