--- a/html/3898218a901b40d58c647e152effbb86.html
+++ b/html/3898218a901b40d58c647e152effbb86.html
@@ -1,6 +1,5 @@
 <p></p>
 <p>
-<script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
 var lab_id = "hmt02"
@@ -9,4 +8,4 @@ var exp_id = "e99492"
 var exp_name = "Reading and Comprehension"
 // ]]></script>
 </p>
-<p><a onclick="submit_feedback(lab_id, lab_name, exp_id, exp_name, user_id)" style="cursor: pointer;">Click here </a> to give feedback</p>
+<p><a onclick="submitFeedback(lab_id, lab_name, exp_id, exp_name, user_id)" style="cursor: pointer;">Click here </a> to give feedback</p>
